- Use termios with getchar input
- Prepare handler for ? and tab chars
- Remove ncurses includes
- Create source files for dynamic routing

Alpha 0.19
- Rename Config vars from confRIPCmd to confRouterCmd
- Added no router rip command
- Implement redistribute static, connected, default for RIP
- Implement default-information originate (eq. redistribute default)
- Implement (no) split-horizon to disable split-horizon for RIP (dangerous !)
- Before check integrity, copy resolv.conf.save into resolv.conf

Alpha 0.20
- Bug & Crash fix when reading command in the shell. Forget to check if offset is positive.
- Start & restart rip daemon when modifying router rip config
- Implement passive-interface for RIP
- Implement cost <interface> <1-16> for RIP (eq to offset-list on CISCO routers)
- Integrate OpenBSD ripd to solution with modifications
-- It's possible to manage update, fail and dead timers.
-- Adapt default timers to CISCO standard

Alpha 0.21
- Implement OSPF routing
-- Implement redistribute static, default, connected with metric and metric-type values
- Dispatch saveRipd into macro WRITE_RIPD, to restart ripd ONLY if router rip command have succeed, not all commands
- Use the correct ripd process ! not /usr/sbin/ripd but /opt/bin/ripd

Alpha 0.22
- Change name for all cmd/command_*.c,h files to cmd/*.c,h
- Move all router ospf commands to new created conf_router_ospf.x
- OSPF improvements
-- Implement passive-interface
-- Implement ip ospf cost <1-65535> on interface
- RIP improvements
-- Implement ip rip cost <1-16> on interface -> remove cost <iface> <1-6> from router rip prompt
-- Bugfix when generate configuration (timers)

Alpha 0.23
- OpenBSD ripd is now fully manageable with BSDRouterd
-- Implement ip rip authentication mode none,text,md5 for each interface
-- Implement ip rip authentication key-string for each interface

Alpha 0.24 - prev
- Change show ip route to a CISCO intepretation
- Reload ospfd & ripd only when daemon is started