@@ -177,30 +177,33 @@ void saveRipd()
 	net_iface* if_cursor = interfaces;
 	while(if_cursor != NULL)
 	{
-		fputs("interface ",fRIPd);
-		fputs(if_cursor->name,fRIPd);
-		fputs("{\n",fRIPd);
-
-		if(if_cursor->rip_passive == 1)
-			fputs("\tpassive\n",fRIPd);
-		if(if_cursor->rip_cost > 1 && if_cursor->rip_cost < 16)
-			fprintf(fRIPd,"\tcost %d\n",if_cursor->rip_cost);
-
-		if(if_cursor->rip_auth_type > RIP_AUTH_NONE && strlen(if_cursor->rip_auth_pwd) > 0 && strlen(if_cursor->rip_auth_pwd) < 17)
+		if(if_cursor->is_rip_network > 0)
 		{
-			if(if_cursor->rip_auth_type == RIP_AUTH_TEXT)
+			fputs("interface ",fRIPd);
+			fputs(if_cursor->name,fRIPd);
+			fputs("{\n",fRIPd);
+
+			if(if_cursor->rip_passive == 1)
+				fputs("\tpassive\n",fRIPd);
+			if(if_cursor->rip_cost > 1 && if_cursor->rip_cost < 16)
+				fprintf(fRIPd,"\tcost %d\n",if_cursor->rip_cost);
+
+			if(if_cursor->rip_auth_type > RIP_AUTH_NONE && strlen(if_cursor->rip_auth_pwd) > 0 && strlen(if_cursor->rip_auth_pwd) < 17)
 			{
-				fputs("\tauth-type simple\n",fRIPd);
-				fprintf(fRIPd,"\tauth-key %s\n",if_cursor->rip_auth_pwd);
+				if(if_cursor->rip_auth_type == RIP_AUTH_TEXT)
+				{
+					fputs("\tauth-type simple\n",fRIPd);
+					fprintf(fRIPd,"\tauth-key %s\n",if_cursor->rip_auth_pwd);
+				}
+				else if(if_cursor->rip_auth_type == RIP_AUTH_MD5)
+				{
+					fputs("\tauth-type crypt\n",fRIPd);
+					fprintf(fRIPd,"\tauth-md 1 \"%s\"\n",if_cursor->rip_auth_pwd);
+					fputs("\tauth-md-keyid 1\n",fRIPd);
+				}
 			}
-			else if(if_cursor->rip_auth_type == RIP_AUTH_MD5)
-			{
-				fputs("\tauth-type crypt\n",fRIPd);
-				fprintf(fRIPd,"\tauth-md 1 \"%s\"\n",if_cursor->rip_auth_pwd);
-				fputs("\tauth-md-keyid 1\n",fRIPd);
-			}
+			fputs("}\n",fRIPd);
 		}
-		fputs("}\n",fRIPd);
 		if_cursor = if_cursor->next;
 	}
 
